---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: proc end bloop
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..14): "<root>"@(dummy)
      StmtBody@(src/main.t:0..14): []
        StmtItem@(src/main.t:0..14): ItemId(0)
          Subprogram@(src/main.t:0..14): "<unnamed>"@(src/main.t:0..14)
            Void@(src/main.t:0..4)
            StmtBody@(src/main.t:5..5): []
error at src/main.t:5..8: unexpected token
| error for src/main.t:5..8: expected identifier, but found `end`
